--- a/.gitignore
+++ b/.gitignore
@@ -52,3 +52,11 @@ CodeCoverage/
 *.VisualState.xml
 TestResult.xml
 nunit-*.xml
+
+# Visual Studio
+.vs/
+*.user
+*.suo
+*.vcxproj.user
+*.dbmdl
+*.jfm
